--- a/about.html
+++ b/about.html
@@ -177,8 +177,8 @@
    <div class="testimonials">
      <div class="testimonials-wrapper">
        <div class="testimonials-text">
-         <h2 class="testimonials-title">Testiomoniale</h2>
-         <p class="testimonials-description">Mai jos poti vedea cateva pareri despre noi. Sau nu stiu ce pun aici</p>
+         <h2 class="testimonials-title">Recenzii</h2>
+         <p class="testimonials-description">Iata ce spun clientii nostri despre noi!</p>
        </div>
        <div class="testimonials-list">
          <img src="assets/img/icons/sort-down.png" class="down-arrow">
