--- a/teava.html
+++ b/teava.html
@@ -210,8 +210,25 @@
     </div>
     <div class="left">
       <img class="footer__logo" src="assets/img/logo.png">
-      <img src="http://www.cutercounter.com/hit.php?id=19120&nd=6&style=52" style="display:block;" border="0" alt="visitor counter">
-      <div class="footer-text">
+      <!-- Default Statcounter code for Milenium
+      https://www.mileniummetcons.com -->
+      <script type="text/javascript">
+        var sc_project=11781583; 
+        var sc_invisible=0; 
+        var sc_security="5266f471"; 
+        var scJsHost = (("https:" == document.location.protocol) ?
+        "https://secure." : "http://www.");
+        document.write("<sc"+"ript type='text/javascript' src='" +
+        scJsHost+
+        "statcounter.com/counter/counter.js'></"+"script>");
+        </script>
+        <noscript><div class="statcounter"><a title="hit counter"
+        href="http://statcounter.com/" target="_blank"><img
+        class="statcounter"
+        src="//c.statcounter.com/11781583/0/5266f471/0/" alt="hit
+        counter"></a></div></noscript>
+        <!-- End of Statcounter Code -->
+        <div class="footer-text">
         <div class="footer__info">Toate produsele noastre au testarile si autorizatiile necesare pentru cele mai exigente standarde in constructii.</div>
         <span class="divider divider-gold divider-margin"></span>
       </div>
