--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="main__box">
       <div class="main__content">
         <div class="main__content-textbox wow fadeIn" data-wow-delay="0.3s">
-          <p class="main__content-subtitle">CALITATE SUPERIOARA</p>
+          <p class="main__content-subtitle">BAAAAAA SUPERIOARA</p>
           <h2 class="main__content-title">MILENIUM METCONS</h2>
           <p class="main__content-paragraph">MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra.</p>
           <a href="#aflamaimulte"><button class="btn btn-white">Afla mai multe</button></a>
