--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <!-- <link rel="stylesheet" href="css/index.min.css" type="text/css"> -->
   <!-- WOW JS -->
-  <script src="js/wow.min.js"></script>
+  <!-- <script src="js/wow.min.js"></script>
   <script>
   new WOW().init();
-  </script>
+  </script> -->
   <title>Hale Metalice | Acasa</title>
 </head>
 <body>
