--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   </div>
   <div class="about">
     <figure class="about__figure">
-      <img class="about__image" alt="hale metalice, Milenium Metcons imagine reprezentativa sectiunii, hala, metalica." src="assets/img/about.jpg" />
+      <img class="about__image" alt="hale metalice, Milenium Metcons imagine reprezentativa sectiunii, hala, metalica." src="assets/img/about.jpeg" />
       <img class="about__image-pattern" alt="hale metalice, Milenium Metcons imagine, model." src="assets/img/patternline.png" />
     </figure>
     <div class="about__text">
