--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs." />
   <meta property="og:type" content="business.business" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
-  <meta property="og:image" content="assets/img/facebook.png" />
+  <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook.png" />
   <!-- Link -->
   <link rel="canonical" href="https://www.mileniummetcons.com/">
   <!-- favicon -->
