--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta property="og:type" content="business.business" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
   <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook.png" />
+  <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook2.png" />
   <!-- Link -->
   <link rel="canonical" href="https://www.mileniummetcons.com/">
   <!-- favicon -->
