update form contact

--- a/contact.html
+++ b/contact.html
@@ -116,16 +116,62 @@
         </div>
       </div>
     </div>
-    <div class="right wow slideInRight">
+  </div>
+    <div class="form-section wow slideInRight">
       <form id="contact" name="contact" netlify>
-        <input class="contact-input" type="text" name="name" placeholder="Nume" required>
-        <input class="contact-input" type="email" name="email" placeholder="Email" required>
-        <input class="contact-input" type="text" name="subiect" placeholder="Subiect" required>
-        <textarea class="contact-textarea" name="text" cols="30" rows="10" placeholder="Mesajul tau" required></textarea>
-        <button class="contact-submit">Trimite mesajul</button>
+        <div class="right">
+            <div class="interactivity">
+                <div class="left">
+                  <div class="interactivity-section">
+                    <h2 class="interactivity-subtitle">Tip structura</h2>
+                    <p class="interactivity-title">Selecteaza tipul structurii metalice</p>
+                    <label for="grinda" id="label-grinda" class="interactivity-label-radio">Grinda cu zabrele
+                      <div class="check">
+                        <input type="radio" name="structure" id="grinda" checked="checked"/>
+                        <div class="circle"></div>
+                      </div>
+                    </label>
+                    <label for="euro" id="label-euro" class="interactivity-label-radio">Europrofile
+                      <div class="check">
+                        <input type="radio" name="structure" id="euro"/>
+                        <div class="circle"></div>
+                      </div>
+                    </label>
+                  </div>
+                  <div class="interactivity-section">
+                    <h2 class="interactivity-subtitle">Dimensiune hala</h2>
+                    <p class="interactivity-title">Introduceti dimensiunile estimative ale constructiei.</p>
+                    <div class="interactivity-section-wrapper2">
+                      <div class="input-box">
+                        <label for="deschidere" class="interactivity-label">Deschidere <span class="measure">m</span></label>
+                        <input placeholder="Introduceti deschiderea" type="number" name="strcture" id="deschidere" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
+                      </div>
+                      <div class="input-box">
+                        <label for="inaltime" class="interactivity-label">Inaltime <span class="measure">m</span></label>
+                        <input placeholder="Introduceti inaltimea" type="number" name="strcture" id="inaltime" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
+                      </div>
+                      <div class="input-box">
+                        <label for="lungime" class="interactivity-label">Lungime <span class="measure">m</span></label>
+                        <input placeholder="Introduceti lungimea" type="number" name="strcture" id="lungime" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
+                      </div>                 
+                    </div>
+                  </div>
+                </div>
+                <div class="right">
+                  <div class="interactivity-image"><span id="height"></span><span class="opening opening-first"></span><img src="http://www.halemetalicesv.ro/images/calculator-11.png" id="img-reprezentare1"/></div>
+                  <div class="interactivity-image hidden"><span class="opening opening-second"></span><span id="width"></span><img src="" id="img-reprezentare2"/></div>
+                </div>
+              </div>            
+        </div>
+        <div class="left">
+            <input class="contact-input" type="text" name="name" placeholder="Nume" required>
+            <input class="contact-input" type="email" name="email" placeholder="Email" required>
+            <input class="contact-input" type="text" name="subiect" placeholder="Subiect" required>
+            <textarea class="contact-textarea" name="text" cols="30" rows="10" placeholder="Mesajul tau" required></textarea>
+            <button class="contact-submit">Trimite mesajul</button>
+        </div>
       </form>
     </div>
-  </div>
   <footer class="main__footer wow fadeIn">
     <div class="right">
       <div class="right-text">
@@ -169,5 +215,6 @@
     </div>
   </footer>
   <script src="js/menu-burger.js"></script>
+  <script src="js/hala-interactivity.js"></script>
 </body>
 </html>
