--- a/contact.html
+++ b/contact.html
@@ -5,19 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs.">
+  <title>Hale Metalice | Contact</title>
+  <meta name="description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Confectionam hale metalice din europrofile sau teava patrata. O hala este construita din materiale de calitate, omologate si testate. Hala metalica demontabila, va ofera atat eficienta in exploatare, costuri minime de mentenanta, cat si o imagine noua. O altfel de imagine fata de concurenta. Fiecare angajat al firmei noastre este pregatit sa raspunda cerintelor oricarui proiect. Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi.">
   <!-- Apple meta's -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="orange">
   <!-- Open Graph -->
   <meta property="fb:app_id" content="386859795173696" /> 
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="Milenium Metcons | Contact" />
-  <meta property="og:description" content="Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs." />
+  <meta property="og:description" content="MILENIUM METCONS este expertul, in confectii metalice, pe care va puteti baza oricand aveti nevoie de solutii metalice complete. Incercam sa dezvoltam permanent gama de servicii si produse pentru a veni in intampinarea necesitatilor dumneavoastra. Confectionam hale metalice din europrofile sau teava patrata.Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Confectionam hale metalice din europrofile sau teava patrata. O hala este construita din materiale de calitate, omologate si testate. Hala metalica demontabila, va ofera atat eficienta in exploatare, costuri minime de mentenanta, cat si o imagine noua. O altfel de imagine fata de concurenta. Fiecare angajat al firmei noastre este pregatit sa raspunda cerintelor oricarui proiect. Aceasta este cheia succesului nostru. Fie ca aveti nevoie de o hala cu destinatie de spatiu comercial sau industrial, fie pentru agricultura, va putem oferi o solutie durabila si potrivita cu fondurile de care dispuneti - hale metalice la cheie. Livram/executam structuri sau sisteme complete de hale cu structura metalica usoara, din teava patrata sau europrofile, care asigura functionalitate, flexibilitate si valoare. Cu noi veti gasi solutia optima pentru constructie hala metalica standard sau la comanda, conform cu necesitatile dvs. Societatea noastra mai comerciaza si teava rotunda trasa sau sudata longitudinal sau elicodial. De la DN-108 pana la DN-1220, iar toate produsele sunt noi." />
   <meta property="og:type" content="business.business" />
+  <meta property="business:contact_data:website" content="https://www.mileniummetcons.com/" />
+  <meta property="business:contact_data:country_name" content="Romania" />
+  <meta property="business:contact_data:email" content="mileniummetcons@yahoo.com" />
   <meta property="og:url" content="https://www.mileniummetcons.com/" />
   <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook.png" />
+  <meta property="og:image" content="https://www.mileniummetcons.com/assets/img/facebook2.png" />
   <!-- Link -->
   <link rel="canonical" href="https://www.mileniummetcons.com/">
+  <link rel="stylesheet" href="css/contact.min.css" type="text/css">
   <!-- favicon -->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicon/apple-icon-60x60.png">
@@ -36,13 +43,11 @@
   <meta name="msapplication-TileColor" content="#FFB200">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#FFB200">
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-  <link rel="stylesheet" href="css/contact.min.css" type="text/css">
+  <!-- WOW JS -->
   <script src="js/wow.min.js"></script>
   <script>
-    new WOW().init();
+  new WOW().init();
   </script>
-  <title>Hale Metalice | Contact</title>
 </head>
 <body>
   <header class="navheader">
@@ -87,8 +92,8 @@
       <div class="menu__element"><a href="/teava.html" >Teava</a></div>
       <div class="menu__element"><a href="/tuburi.html" >Tuburi</a></div>
     </div>  
-  <div class="main wow fadeIn" data-wow-delay="0.3s">
-    <div class="left wow slideInLeft" data-wow-delay="0.35s">
+  <div class="main wow fadeIn">
+    <div class="left wow slideInLeft">
       <div class="main-text">
         <h1 class="main-title">Contacteaza-ne</h1>
         <div class="divider"></div>
@@ -117,61 +122,61 @@
       </div>
     </div>
   </div>
-    <div class="form-section wow slideInRight">
-      <form id="contact" name="contact" netlify>
-        <div class="right">
-            <div class="interactivity">
-                <div class="left">
-                  <div class="interactivity-section">
-                    <h2 class="interactivity-subtitle">Tip structura</h2>
-                    <p class="interactivity-title">Selecteaza tipul structurii metalice</p>
-                    <label for="grinda" id="label-grinda" class="interactivity-label-radio">Grinda cu zabrele
-                      <div class="check">
-                        <input type="radio" name="structure" id="grinda" checked="checked"/>
-                        <div class="circle"></div>
-                      </div>
-                    </label>
-                    <label for="euro" id="label-euro" class="interactivity-label-radio">Europrofile
-                      <div class="check">
-                        <input type="radio" name="structure" id="euro"/>
-                        <div class="circle"></div>
-                      </div>
-                    </label>
-                  </div>
-                  <div class="interactivity-section">
-                    <h2 class="interactivity-subtitle">Dimensiune hala</h2>
-                    <p class="interactivity-title">Introduceti dimensiunile estimative ale constructiei.</p>
-                    <div class="interactivity-section-wrapper2">
-                      <div class="input-box">
-                        <label for="deschidere" class="interactivity-label">Deschidere <span class="measure">m</span></label>
-                        <input placeholder="Introduceti deschiderea" type="number" name="strcture" id="deschidere" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
-                      </div>
-                      <div class="input-box">
-                        <label for="inaltime" class="interactivity-label">Inaltime <span class="measure">m</span></label>
-                        <input placeholder="Introduceti inaltimea" type="number" name="strcture" id="inaltime" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
-                      </div>
-                      <div class="input-box">
-                        <label for="lungime" class="interactivity-label">Lungime <span class="measure">m</span></label>
-                        <input placeholder="Introduceti lungimea" type="number" name="strcture" id="lungime" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
-                      </div>                 
-                    </div>
-                  </div>
+  <div class="form-section wow slideInRight">
+    <form id="contact" name="contact" netlify>
+      <div class="right">
+        <div class="interactivity">
+          <div class="left">
+            <div class="interactivity-section">
+              <h2 class="interactivity-subtitle">Tip structura</h2>
+              <p class="interactivity-title">Selecteaza tipul structurii metalice</p>
+              <label for="grinda" id="label-grinda" class="interactivity-label-radio">Grinda cu zabrele
+                <div class="check">
+                  <input type="radio" name="structure" id="grinda" checked="checked" value="Grinda cu zabrele"/>
+                  <div class="circle"></div>
                 </div>
-                <div class="right">
-                  <div class="interactivity-image"><span id="height"></span><span class="opening opening-first"></span><img src="http://www.halemetalicesv.ro/images/calculator-11.png" id="img-reprezentare1"/></div>
-                  <div class="interactivity-image hidden"><span class="opening opening-second"></span><span id="width"></span><img src="" id="img-reprezentare2"/></div>
+              </label>
+              <label for="euro" id="label-euro" class="interactivity-label-radio" value="Europrofile">Europrofile
+                <div class="check">
+                  <input type="radio" name="structure" id="euro"/>
+                  <div class="circle"></div>
                 </div>
-              </div>            
-        </div>
-        <div class="left">
-            <input class="contact-input" type="text" name="name" placeholder="Nume" required>
-            <input class="contact-input" type="email" name="email" placeholder="Email" required>
-            <input class="contact-input" type="text" name="subiect" placeholder="Subiect" required>
-            <textarea class="contact-textarea" name="text" cols="30" rows="10" placeholder="Mesajul tau" required></textarea>
-            <button class="contact-submit">Trimite mesajul</button>
-        </div>
-      </form>
-    </div>
+              </label>
+            </div>
+            <div class="interactivity-section">
+              <h2 class="interactivity-subtitle">Dimensiune hala</h2>
+              <p class="interactivity-title">Introduceti dimensiunile estimative ale constructiei.</p>
+              <div class="interactivity-section-wrapper2">
+                <div class="input-box">
+                  <label for="deschidere" class="interactivity-label">Deschidere <span class="measure">m</span></label>
+                  <input placeholder="Introduceti deschiderea" type="number" name="strcture" id="deschidere" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
+                </div>
+                <div class="input-box">
+                  <label for="inaltime" class="interactivity-label">Inaltime <span class="measure">m</span></label>
+                  <input placeholder="Introduceti inaltimea" type="number" name="strcture" id="inaltime" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
+                </div>
+                <div class="input-box">
+                  <label for="lungime" class="interactivity-label">Lungime <span class="measure">m</span></label>
+                  <input placeholder="Introduceti lungimea" type="number" name="strcture" id="lungime" onKeyDown="if (this.value.length >= 5) return false;" disabled="disabled"/>
+                </div>                 
+              </div>
+            </div>
+          </div>
+          <div class="right">
+            <div class="interactivity-image"><span id="height"></span><span class="opening opening-first"></span><img src="http://www.halemetalicesv.ro/images/calculator-11.png" id="img-reprezentare1"/></div>
+            <div class="interactivity-image hidden"><span class="opening opening-second"></span><span id="width"></span><img src="" id="img-reprezentare2"/></div>
+          </div>
+        </div>            
+      </div>
+      <div class="left">
+        <input class="contact-input" type="text" name="name" placeholder="Nume" required>
+        <input class="contact-input" type="email" name="email" placeholder="Email" required>
+        <input class="contact-input" type="text" name="subiect" placeholder="Subiect" required>
+        <textarea class="contact-textarea" name="text" cols="30" rows="10" placeholder="Mesajul tau" required></textarea>
+        <button class="contact-submit">Trimite mesajul</button>
+      </div>
+    </form>
+  </div>
   <footer class="main__footer wow fadeIn">
     <div class="right">
       <div class="right-text">
