edited refactored more-info update pics, modify more about and a lil bit gallery plus the info banner

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   </div>
   <div class="about">
     <figure class="about__figure">
-      <img class="about__image" alt="hale metalice, Milenium Metcons imagine reprezentativa sectiunii, hala, metalica." src="assets/img/blackhall.jpeg" />
+      <img class="about__image" alt="hale metalice, Milenium Metcons imagine reprezentativa sectiunii, hala, metalica." src="assets/img/blackhall.jpg" />
       <img class="about__image-pattern" alt="hale metalice, Milenium Metcons imagine, model." src="assets/img/patternline.png" />
     </figure>
     <div class="about__text">
@@ -167,7 +167,7 @@
       <img data-wow-delay="0.2s" class="wow fadeIn" src="assets/img/gallery/img16.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <figure class="gallery__figure">
-      <img data-wow-delay="0.3s" class="wow fadeIn" src="assets/img/gallery/whitehall.jpeg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
+      <img data-wow-delay="0.3s" class="wow fadeIn" src="assets/img/gallery/whitehall.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons.">
     </figure>
     <figure class="gallery__figure">
       <img data-wow-delay="0.25s" class="wow fadeIn" src="assets/img/gallery/img23.jpg" alt="Imagine cu o hala metalica, hale metalice, hala, construita de Milenium Metcons."> 
