--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ro" dir="ltr">
 <head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5440879351287045",
+    enable_page_level_ads: true
+  });
+</script>
   <!-- Default options -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
