--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="ro" dir="ltr">
 <head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-5440879351287045",
+    enable_page_level_ads: true
+  });
+</script>
   <!-- Default options -->
   <title>Hale Metalice | Acasa</title>
   <meta charset="UTF-8">
